# Agentops-replay

./: .coverage  .env  .env.example  .gitignore  ATTEMPTED_EVIDENCE_FORGERY.md  AUTHORITY_SOURCE_OF_TRUTH.md  CHAIN_AUTHORITY_INVARIANTS.md  CHAIN_SEAL_SIGNING.md  CLAUDE.md  COMPLIANCE_GRADE_DEFINITION.md  CONSTITUTION.md  CONSTITUTIONAL_API_BOUNDARY.md  CONTRIBUTING.md  DEPLOYMENT.md  EVENT_LOG_SPEC.md  EVIDENCE_CLASSIFICATION_SPEC.md  FAILURE_MODES.md  INCIDENT_RESPONSE.md  INTEGRATION_STATUS.md  LOG_DROP_ABUSE_PREVENTION.md  PRODUCTION_EVIDENCE_CONTRACT.md  PRODUCTION_INGESTION_CONTRACT.md  PR_DAY2_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  REFERENCE_DEPLOYMENT.md  SCHEMA.md  SECURITY_AUDIT.md  VERIFIER_FREEZE.md  _push_docs.sh  agentops_events.schema.json  agentops_prd_v2.md  day-1.md  day-2.md  docker-compose.yml  goal.md  goals-day-3.md  goals-day-4.md  goals.md  goals_today.md  (+4 more)
.agent/rules/: agentops.md  strictlooping.md
.github/workflows/: ci.yml  quality_gate.yml
AgentOps_docs/: AGENT_CONTEXT.md  AGENT_CONTEXT_v2.md  AGENT_PROMPT.md  AGENT_PROMPT_v2.md  BUILD_SEQUENCE.md  BUILD_SEQUENCE_v2.md  MARKET_ENTERPRISE_SECURITY_v2.md  MARKET_OPENSOURCE_COMMUNITY.md  MARKET_OPENSOURCE_COMMUNITY_v2.md  PRD_v5.md  RESEARCH_PAPER_ROADMAP.md  TRD_v2.md
agentops_ingest/: __init__.py  api.py  errors.py  export.py  requirements.txt  sealer.py  store.py  test_ingestion.py  validator.py
agentops_sdk/: __init__.py  buffer.py  client.py  envelope.py  events.py  jcs.py  remote_client.py  sender.py  transport.py
agentops_verify/: __init__.py  cli.py  errors.py  test_adversarial.py  test_cli.py  test_error_contract.py  test_frozen_contracts.py  test_verifier.py  test_verifier_coverage.py  test_verifier_session_id_mismatch.py  verifier.py
backend/: .env  Dockerfile  agent_simulator.py  alembic.ini  docker-compose.yml  live_event_generator.py  policy.yaml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/results/: benchmark.json
backend/tests/: README.md  conftest.py  test_api.py  test_append_only.sh  test_constitutional.py
demo/: demo_local_incident.py  demo_remote_langchain.py
docs/: CHAIN_AUTHORITY_INVARIANTS.md  COLD_START_VERIFICATION.md  EVENT_LOG_SPEC.md  FAILURE_MODES.md  POLICY_SEMANTICS.md  REGULATORY_NOTE.md  TRUST_MODEL.md
examples/: direct_sdk_integration.py  multi_agent_demo.py  sdk_demo.py
examples/colosseum_adapter/: colosseum_adapter.py  demo_evidence_gap.py  gap3_differential_audit.py
examples/langchain_demo/: INCIDENT_INVESTIGATION.md  README.md  agent.py  langchain_session.jsonl  run_demo.py  session_output.jsonl  verify_session.py
examples/terrarium_adapter/: demo_meeting_scheduling.py  demo_tamper_detection.py  terrarium_adapter.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
reference_demo/: DEMO_SCOPE.md  agent.py  e2e_test.py  seal_session.py
scripts/: verify_violation.py
sdk/python/: DEPRECATED.md
verifier/: agentops_verify.py  generator.py  jcs.py  verifier_core.py
(+180 files in other folders)
