[project]
name = "agentops-replay-pro"
version = "0.1.0"
description = "AgentOps Replay Pro - Evidence Infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0,<0.7",
    "mypy>=1.10.0,<1.12",
    "pytest>=8.0.0,<9",
    "pytest-cov>=5.0.0,<6",
]

[tool.setuptools.packages.find]
include = [
  "backend",
  "backend.*",
  "verifier",
  "verifier.*",
  "agentops_sdk",
  "agentops_sdk.*",
]
exclude = [
  "demo",
  "agent_demos",
  "frontend",
  "sdk",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend/app", "sdk/python", "verifier"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes (Unused variables F841, Unused imports F401)
    "E",    # pycodestyle
    "W",    # pycodestyle
    "B",    # flake8-bugbear (Logic errors)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "PL",   # Pylint (PLW - warnings, incl shadowing)
    "RUF"   # Ruff specific
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Minimal ignores if absolutely necessary. User said "Do NOT allow per-file ignores unless absolutely required"
# We start with none.

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
implicit_reexport = false

# Constraints on disallowing specific things
disallow_any_generics = true
disallow_subclassing_any = true

# Path configuration
mypy_path = "backend:sdk/python:verifier:."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "backend.alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 

[[tool.mypy.overrides]]
module = "backend.demo_agents.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "demo.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agent_demos.*"
ignore_errors = true 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=backend/app --cov=sdk/python --cov=verifier --cov-fail-under=90"
testpaths = [
    "backend/tests",
    "verifier", # If verifier has tests inside
]
python_files = "test_*.py"
markers = [
    "constitutional: Constitutional guarantee tests",
    "api: API endpoint tests",
    "e2e: End-to-end flow tests",
    "slow: Slow-running tests"
]

[tool.coverage.run]
# Demo and example code is NON-AUTHORITATIVE - excluded from coverage
omit = [
    "agent_demos/*",
    "examples/*",
    "backend/demo_agents/*",
    "**/test_*.py",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
